FindBugs: Instead of using "new Integer(xxx)", use "Integer.valueOf(xxx)".  Ditto for Double