@@ -211,7 +211,7 @@ public class Recorder extends Sink {
 
         if (capacityValue != 0) {
             _records.add(record);
-            _timeRecord.add(new Double(getDirector().getModelTime()
+            _timeRecord.add(Double.valueOf(getDirector().getModelTime()
                     .getDoubleValue()));
 
             if ((capacityValue > 0) && (_records.size() > capacityValue)) {
