@@ -66,10 +66,10 @@ public class ThrowException extends Sink {
             (ptolemy.actor.lib.ThrowException) getComponent();
 
         ArrayList args = new ArrayList();
-        args.add(new Integer(0));
+        args.add(Integer.valueOf(0));
 
         for (int i = 0; i < actor.input.getWidth(); i++) {
-            args.set(0, new Integer(i));
+            args.set(0, Integer.valueOf(i));
             _codeStream.appendCodeBlock("fireBlock", args);
         }
         return processCode(_codeStream.toString());
