@@ -132,8 +132,8 @@ public class SchedulePlotter extends Attribute implements ScheduleListener {
                         id = _taskMap.size();
 
                         final int finalid = id;
-                        _taskMap.put(actorName, new Integer(id));
-                        _taskState.add(new Integer(0));
+                        _taskMap.put(actorName, Integer.valueOf(id));
+                        _taskState.add(Integer.valueOf(0));
 
                         // Note: addLegend is not intended to be
                         // called from outside the swing thread.
@@ -153,7 +153,7 @@ public class SchedulePlotter extends Attribute implements ScheduleListener {
                     int _oldState = ((Integer) _taskState.get(id)).intValue();
                     plot.addPoint(id, time, id + (_oldState / 2.1), true);
                     plot.addPoint(id, time, id + (scheduleEvent / 2.1), true);
-                    _taskState.set(id, new Integer(scheduleEvent));
+                    _taskState.set(id, Integer.valueOf(scheduleEvent));
                     plot.fillPlot();
                     plot.repaint();
                 }
