@@ -388,7 +388,7 @@ public class SmallWorldRouter extends TypedAtomicActor {
                     _receptions = new HashMap();
                 }
 
-                Double timeDouble = new Double(time.getDoubleValue());
+                Double timeDouble = Double.valueOf(time.getDoubleValue());
                 String[] labels = { "data", "destination", "routeTo", "hops" };
                 RecordToken result = new RecordToken(labels, values);
                 _receptions.put(timeDouble, result);
@@ -417,7 +417,7 @@ public class SmallWorldRouter extends TypedAtomicActor {
                 // We may be getting fired because of an impending event.
                 double currentTimeValue = getDirector().getModelTime()
                         .getDoubleValue();
-                Double timeDouble = new Double(currentTimeValue);
+                Double timeDouble = Double.valueOf(currentTimeValue);
                 RecordToken reception = (RecordToken) _receptions
                         .get(timeDouble);
 
