@@ -1291,7 +1291,7 @@ public class DoubleMatrixMath {
         }
 
         return new Object[] { orthogonalMatrix, dotProductMatrix,
-                oneOverNormSquaredArray, new Integer(nullity) };
+                oneOverNormSquaredArray, Integer.valueOf(nullity) };
     }
 
     /** Return the number of rows of a matrix.
