@@ -180,7 +180,7 @@ public class Engine {
     static int engOutputBufferSize = 2048;
 
     /** Used for synchronization. */
-    public static final Integer semaphore = new Integer(0);
+    public static final Integer semaphore = Integer.valueOf(0);
 
     // semaphore is public so that javadoc works.
 
