@@ -106,7 +106,7 @@ public class InterfaceAutomatonGraphController extends FSMGraphController {
         public ComposeWithAction() {
             super("Compose With");
             putValue("tooltip", "Compose with another interface automaton");
-            putValue(diva.gui.GUIUtilities.MNEMONIC_KEY, new Integer(
+            putValue(diva.gui.GUIUtilities.MNEMONIC_KEY, Integer.valueOf(
                     KeyEvent.VK_C));
         }
 
